# graphql-parser

./: .gitignore  README.md  graphql-client-generator.cabal  graphql-parser.cabal  hie.yaml
exe/: Main.hs
src/Graphql/: Parser.hs  Printer.hs  Types.hs
src/Graphql/Client/: Parser.hs  Printer.hs  Types.hs
src/Graphql/Client/Parser/: Types.hs
src/Graphql/Client/Printer/: Purescript.hs
src/Graphql/Parser/: Types.hs
src/Graphql/Printer/: Purescript.hs
test/: Gen.hs
test/Test/: Parser.hs
test/golden/parser/: 11.golden.txt  11.printed.txt  14.golden.txt  14.printed.txt  16.golden.txt  16.printed.txt  25.printed.txt  26.golden.txt  27.golden.txt  27.graphql  27.printed.txt  28.golden.txt  28.graphql  28.printed.txt  37.golden.txt  39.golden.txt  39.graphql  62.golden.txt  69.golden.txt  7.golden.txt  7.printed.txt  73.golden.txt  73.graphql  74.golden.txt  8.golden.txt  8.printed.txt  example-query.golden.txt  example-query.graphql  example-query.printed.txt  schema.golden.txt  schema.graphql
