cabal-version: 2.4
name:          graphql-client-generator
version:       0.1.0.0
license:
author:        Yuriy Lazarev
maintainer:    unisay@users.noreply.github.com

source-repository head
  type:     git
  location: https://github.com/Unisay/graphql-client-generator.git

common deps
  build-depends:
    , base    ^>=4.14.1
    , relude  ^>=1.0.0.1

common opts
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    BlockArguments
    DataKinds
    DerivingStrategies
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    PartialTypeSignatures
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeApplications
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Werror=incomplete-patterns
    -Wredundant-constraints -Wpartial-fields -Wtabs
    -Wmissing-local-signatures -fhelpful-errors
    -fprint-expanded-synonyms -fwarn-unused-do-bind -O2

library
  import:          opts, deps
  hs-source-dirs:  src
  exposed-modules:
    Graphql.Parser
    Graphql.Parser.Types
    Graphql.Printer
    Graphql.Types

  -- other-modules:
  -- other-extensions:
  build-depends:
    , containers                   ^>=0.6.4.1
    , megaparsec                   ^>=9.0.1
    , parser-combinators           ^>=1.2.1
    , path                         ^>=0.8
    , path-io                      ^>=1.6.2
    , prettyprinter                ^>=1.7
    , prettyprinter-ansi-terminal  ^>=1.1.2
    , text                         ^>=1.2.4

test-suite tests
  import:             opts, deps
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  ghc-options:        -threaded
  other-modules:
    Gen
    Test.Parser

  build-tool-depends: tasty-discover:tasty-discover -any
  build-depends:
    , bytestring                ^>=0.10.10.1
    , filepath                  ^>=1.4.2.1
    , graphql-client-generator
    , hedgehog                  ^>=1.0.3
    , hedgehog-corpus           ^>=0.2.0
    , megaparsec                ^>=9.0.1
    , pretty-simple             ^>=4.0
    , tasty                     ^>=1.3
    , tasty-discover            ^>=4.2.2
    , tasty-golden              ^>=2.3.4
    , tasty-hedgehog            ^>=1.0.0.2
    , text                      ^>=1.2.4

executable graphql-client-generator
  import:         opts, deps
  hs-source-dirs: exe
  main-is:        Main.hs
  ghc-options:    -threaded
  build-depends:  graphql-client-generator
